# talkpacific

./: README.md  docker-compose.yml
api-talkpacific/: .env-template  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
api-talkpacific/api_talkpacific/: __init__.py  language_coach.py  language_detector.py  main.py  models.py  teacher_db.py
api-talkpacific/tests/: test_chat_response_processor.py  test_teacher_db.py
app-desktop-react/: .env-template  .gitignore  README.md  electron.js  package-lock.json  package.json  tsconfig.json
app-desktop-react/src/: App.js
app-desktop-react/src/base/: BaseService.ts  InstanceFactory.ts  useService.ts
app-desktop-react/src/languagecoach/: LanguageCoach.ts  Languages.ts  WebLanguageCoach.ts  useLanguageCoachMessages.ts  useLanguageCoachOptions.ts
app-desktop-react/src/learningpage/: ChatInputArea.tsx  ChatItemStudentComponent.tsx  ChatItemTeacherComponent.tsx  CreateConversationForm.tsx  LanguageSelect.tsx  LearningChatComponent.tsx  LearningContext.tsx  LearningHeader.tsx  LearningItemComponent.tsx  LearningPage.tsx  LearningSider.tsx  LearningStreamChatItem.tsx
app-desktop-react/src/platform/: PlatformContext.ts
app-desktop-react/src/speechtotext/: ElectronSpeechToText.ts  SpeechToText.ts  SpeechToTextComponent.tsx  WebSpeechToText.ts
app-desktop-react/src/texttoaudio/: TextToAudio.ts  TextToAudioComponent.tsx  VoiceSelectorComponent.tsx  WebTextToAudio.ts  useTextToAudio.ts
